# qfi_local_noise

./: .gitignore  .travis.yml  README.rst  pyproject.toml
qfi_local_noise/: __init__.py  _fi_calc.py  _fi_k_calc.py  _fi_lbound_adhoc.py  _iter_sites.py  _optimize_state.py  _states_desc.py  _symm_states_desc.py  _util.py  validate.py
test/: test_cases.py  test_fi_calc.py  test_fi_k_calc.py  test_fi_lbound_adhoc.py  test_optimize_state.py  test_states_desc.py  test_symm_states_desc.py  test_util.py
