[tool.poetry]
name = "qfi_local_noise"
version = "0.1.0"
description = "Compute the quantum Fisher information for many-body systems with local noise"
authors = ["Philippe Faist <philippe.faist@fu-berlin.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
scipy = "*"
matplotlib = "*"
tqdm = "*"
h5py = "*"
phfnbutils = {git = "https://github.com/phfaist/phfnbutils.git"}
qutip = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
